# soupify

./: .gitignore  Cargo.toml  README.md  graphify-out  install.sh
resources/: ai_instructions.json  how_to_soup.json  how_to_soup.md  how_to_soup.yaml  how_to_soup_condensed.md
resources/old/: how_to_soup_claude.json  how_to_soup_gemini.md
src/: cli.rs  config.rs  desoupify.rs  error.rs  graph.rs  lib.rs  main.rs  models.rs  open.rs  pathing.rs  secrets.rs  sharktopus.rs  soup_format.rs  soupify.rs
src/repomap/: graph.rs  importance.rs  mod.rs  render.rs  tags.rs
src/selection/: budget.rs  index.rs  mod.rs  query.rs  traverse.rs
tests/: cli_desoupify.rs  cli_soupify.rs  direct_soup_paths.rs  format_roundtrip.rs  partial_soup_blocks.rs  soup_output_format.rs
