[package]
name = "soupify"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
regex = "1.12.2"
serde_json = "1.0.145"
thiserror = "2.0.17"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.17"
libc = "0.2.177"
predicates = "3.1.3"
tempfile = "3.20.0"
