[package]
name = "soupify"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
regex = "1.12.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
thiserror = "2.0.17"
walkdir = "2.5.0"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.22"
tree-sitter-java = "0.21"
tree-sitter-ruby = "0.21"
tantivy = "0.22"
blake3 = "1.5"

[dev-dependencies]
assert_cmd = "2.0.17"
libc = "0.2.177"
predicates = "3.1.3"
tempfile = "3.20.0"
